--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>notlikethiss - Front-end Dev</title>
-	<link rel="stylesheet" type="text/css" href="/styles/style.css">
-	<link rel="">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 	<body class="main_Body">
 		<div class="innerBox">
